--- a/devops/values/staging.yaml
+++ b/devops/values/staging.yaml
@@ -266,6 +266,8 @@ replybot:
     value: "http://gbv-botserver"
   - name: FACEBOOK_GRAPH_URL
     value: "https://graph.facebook.com/v8.0"
+  - name: FORMCENTRAL_URL
+    value: "http://gbv-formcentral"
 
 formcentral:
   replicaCount: 1
