--- a/formcentral/test.yaml
+++ b/formcentral/test.yaml
@@ -3,30 +3,26 @@ version: '3'
 services:
   main:
     depends_on:
-      - postgres
+      - cockroachdb
     build: .
     image: formcentral
     environment:
-      POSTGRES_DB: test-db
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
-      POSTGRES_USER: test-user
-      POSTGRES_PASSWORD: test-pass
+      CHATBASE_DATABASE: chatroach
+      CHATBASE_HOST: cockroachdb
+      CHATBASE_PORT: 26257
+      CHATBASE_USER: root
     command: |
       bash -c '
         go get -u github.com/nathany/looper
-        tools/wait-for-it.sh postgres:5432 -t 60 &&
-        go test &&
+        tools/wait-for-it.sh cockroachdb:26257 -t 60
+        go test || true
         looper
       '
     volumes:
       - ./:/app
-      - ../tools:/app/tools
-  postgres:
-    image: postgres:9.6.11-alpine
-    environment:
-      POSTGRES_DB: test-db
-      POSTGRES_USER: test-user
-      POSTGRES_PASSWORD: test-pass
+      - ../tools:/app/tools    
+  cockroachdb:
+    image: cockroachdb/cockroach:v20.1.4
+    command: start --insecure
     ports:
-      - 5432:5432
+      - 26257:26257
