--- a/devops/values/test.yaml
+++ b/devops/values/test.yaml
@@ -19,14 +19,14 @@ kafkabrokers: &kb gbv-kafka:9092
 botEnvs: &botenvs gbv-bot-envs
 chatbaseHost: &host gbv-cockroachdb-public
 
-versionDashboard: &vdashboard 0.0.21
+versionDashboard: &vdashboard 0.0.26
 versionBotserver: &vbotserver 0.0.9
-versionReplybot: &vreplybot v0.0.125
+versionReplybot: &vreplybot v0.0.126
 versionLinksniffer: &vlinksniffer v0.0.4
 versionDean: &vdean v0.0.24
 versionScribble: &vscribble 0.0.20
 versionDinersclub: &vdinersclub v0.0.10
-versionFormcentral: &vformcentral 0.0.4
+versionFormcentral: &vformcentral v0.0.7
 
 linksniffer:
   replicaCount: 1
