--- a/devops/values/test.yaml
+++ b/devops/values/test.yaml
@@ -198,6 +198,8 @@ replybot:
     value: "http://gbv-dashboard/api/v1"
   - name: BOTSERVER_URL
     value: "http://gbv-botserver"
+  - name: FORMCENTRAL_URL
+    value: "http://gbv-formcentral"
 
 botserver:
   replicaCount: 1
