--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -427,7 +427,8 @@ replybot:
     value: "http://gbv-botserver"
   - name: FACEBOOK_GRAPH_URL
     value: "https://graph.facebook.com/v11.0"
-
+  - name: FORMCENTRAL_URL
+    value: "http://gbv-formcentral"
 
 botserver:
   replicaCount: 3
