--- a/formcentral/test.yaml
+++ b/formcentral/test.yaml
@@ -23,6 +23,8 @@ services:
       '
     volumes:
       - ./:/app
+    networks:
+      - fly
   system:
     build:
       context: ../system
@@ -39,6 +41,8 @@ services:
       - 80:80
     volumes:
       - ../system:/app
+    networks:
+      - fly
   initdb:
     image: cockroachdb/cockroach:v20.1.4
     depends_on:
@@ -52,8 +56,16 @@ services:
     volumes:
       - ../devops:/tools
       - ../devops/sql:/migrations
+    networks:
+      - fly
   cockroachdb:
     image: cockroachdb/cockroach:v20.1.4
     command: start --insecure
     ports:
       - 26257:26257
+    networks:
+      - fly
+
+networks:
+  fly:
+    driver: bridge
