--- a/formcentral/Dockerfile.dev
+++ b/formcentral/Dockerfile.dev
@@ -6,6 +6,8 @@ RUN apk add --no-cache \
     readline-dev
 
 RUN mkdir /app
+COPY . /app
 WORKDIR /app
 
+RUN go mod download
 RUN go get -u github.com/nathany/looper
