add local test suite

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,13 @@
 version: 2
 
 jobs:
+  test_dashboard_server:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh dashboard-server --is-ci
   test_dinersclub:
     machine:
       image: ubuntu-1604:202007-01
@@ -46,6 +53,7 @@ workflows:
   version: 2
   test:
     jobs:
+      - test_dashboard_server
       - test_dinersclub
       - test_formcentral
       - test_e2e:
