--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ jobs:
       - checkout
       - run:
           command: ./test.sh formcentral --is-ci
+  test_replybot:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh replybot --is-ci
   test_e2e:
     machine:
       image: ubuntu-1604:202007-01
@@ -56,5 +63,6 @@ workflows:
       - test_dashboard_server
       - test_dinersclub
       - test_formcentral
+      - test_replybot
       - test_e2e:
           context: secrets
