--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,20 @@
 version: 2
 
 jobs:
+  test_dashboard_server:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh dashboard-server --is-ci
+  test_dean:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh dean --is-ci
   test_dinersclub:
     machine:
       image: ubuntu-1604:202007-01
@@ -15,6 +29,27 @@ jobs:
       - checkout
       - run:
           command: ./test.sh formcentral --is-ci
+  test_linksniffer:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh linksniffer --is-ci
+  test_replybot:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh replybot --is-ci
+  test_scribble:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          command: ./test.sh scribble --is-ci
   test_e2e:
     machine:
       image: ubuntu-1604:202007-01
@@ -46,7 +81,12 @@ workflows:
   version: 2
   test:
     jobs:
+      - test_dashboard_server
+      - test_dean
       - test_dinersclub
       - test_formcentral
+      - test_linksniffer
+      - test_replybot
+      - test_scribble
       - test_e2e:
           context: secrets
