--- a/scribble/Dockerfile.dev
+++ b/scribble/Dockerfile.dev
@@ -4,6 +4,7 @@ RUN apk add --no-cache \
     gcc \
     libc-dev \
     librdkafka-dev=1.8.2-r0 \
+    npm \
     readline-dev
 
 RUN mkdir /app
@@ -11,4 +12,4 @@ COPY go.mod /app
 WORKDIR /app
 
 RUN go mod download
-RUN go get -u github.com/nathany/looper
+RUN npm install -g nodemon
