--- a/formcentral/Dockerfile.dev
+++ b/formcentral/Dockerfile.dev
@@ -3,11 +3,11 @@ FROM golang:alpine
 RUN apk add --no-cache \
     gcc \
     libc-dev \
-    readline-dev
+    npm
 
 RUN mkdir /app
 COPY go.mod /app
 WORKDIR /app
 
 RUN go mod download
-RUN go get -u github.com/nathany/looper
+RUN npm install -g nodemon
