install lodash and mustache dependencies

--- a/websurvey/package.json
+++ b/websurvey/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "chai": "^4.3.4",
+    "lodash": "^4.17.21",
+    "mustache": "^4.2.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0",
     "yaml": "^1.10.2"
