--- a/websurvey/package.json
+++ b/websurvey/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -single"
+    "start": "sirv public -single",
+    "test": "mocha -w --colors lib/**/*.test.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
+    "chai": "*",
+    "mocha": "*",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
@@ -18,7 +21,9 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "yaml": "^1.10.2"
   }
 }
