print db schema

--- a/dinersclub/test.yaml
+++ b/dinersclub/test.yaml
@@ -57,6 +57,7 @@ services:
     networks:
       - fly
   system:
+    container_name: system
     build:
       context: ../system
     environment:
