--- a/formcentral/test.yaml
+++ b/formcentral/test.yaml
@@ -42,6 +42,7 @@ services:
     networks:
       - fly
   system:
+    container_name: system
     build:
       context: ../system
     environment:
