--- a/dashboard-server/test.yaml
+++ b/dashboard-server/test.yaml
@@ -26,6 +26,7 @@ services:
     networks:
       - fly
   system:
+    container_name: system
     build:
       context: ../system
     environment:
