--- a/dean/test.yaml
+++ b/dean/test.yaml
@@ -51,6 +51,7 @@ services:
     networks:
       - fly
   system:
+    container_name: system
     build:
       context: ../system
     environment:
