--- a/scribble/test.yaml
+++ b/scribble/test.yaml
@@ -49,6 +49,7 @@ services:
     networks:
       - fly
   system:
+    container_name: system
     build:
       context: ../system
     environment:
