--- a/websurvey/package.json
+++ b/websurvey/package.json
@@ -21,10 +21,13 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@vlab-research/translate-typeform": "github:vlab-research/translate-typeform",
     "autoprefixer": "^9.8.8",
     "chai": "^4.3.4",
+    "email-validator": "^2.0.4",
     "lodash": "^4.17.21",
     "mustache": "^4.2.0",
+    "phone": "^3.1.12",
     "postcss": "^7.0.39",
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.10.2",
