--- a/dashboard-server/package.json
+++ b/dashboard-server/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/vlab-research/dashboard-server#readme",
   "devDependencies": {
     "chai": "4.2.0",
+    "crypto": "^1.0.1",
     "eslint": "5.15.1",
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
@@ -31,8 +32,11 @@
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
+    "got": "11.8.2",
     "husky": "^1.3.1",
+    "jose": "^4.8.3",
     "mocha": "6.0.2",
+    "nock": "^13.2.8",
     "prettier": "1.16.4"
   },
   "dependencies": {
@@ -44,6 +48,7 @@
     "dotenv": "6.2.0",
     "express": "4.16.4",
     "express-jwt": "5.3.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
     "joi": "14.3.1",
     "jwks-rsa": "1.4.0",
     "morgan": "^1.9.1",
