devops: upgraded values files and prometheus values

--- a/devops/prometheus/values.yaml
+++ b/devops/prometheus/values.yaml
@@ -33,6 +33,7 @@ kubeScheduler:
   enabled: false
 
 alertmanager:
+  enabled: true
   alertmanagerSpec:
     useExistingSecret: true
     configSecret: "alertmanager"
