--- a/dashboard-server/package.json
+++ b/dashboard-server/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/vlab-research/dashboard-server#readme",
   "devDependencies": {
     "chai": "4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "5.15.1",
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
@@ -33,12 +34,14 @@
     "eslint-plugin-standard": "4.0.0",
     "husky": "^1.3.1",
     "mocha": "6.0.2",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "@cubejs-backend/postgres-driver": "^0.10.35",
     "@cubejs-backend/server-core": "^0.10.41",
     "@vlab-research/client-cursor-stream": "^0.1.1",
+    "base-64": "^1.0.0",
     "cors": "2.8.5",
     "csv-stringify": "5.3.0",
     "dotenv": "6.2.0",
