--- a/dashboard-server/package.json
+++ b/dashboard-server/package.json
@@ -35,6 +35,7 @@
     "husky": "^1.3.1",
     "mocha": "6.0.2",
     "prettier": "1.16.4",
+    "proxyquire": "^2.1.3",
     "supertest": "^6.2.4"
   },
   "dependencies": {
