--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -18,13 +18,13 @@ botEnvs: &botenvs gbv-bot-envs
 chatbaseHost: &host "gbv-cockroachdb-public"
 
 
-versionDashboard: &vdashboard v0.0.27
+versionDashboard: &vdashboard v0.0.30
 versionBotserver: &vbotserver 0.0.9
-versionReplybot: &vreplybot v0.0.137
+versionReplybot: &vreplybot v0.0.138
 versionLinksniffer: &vlinksniffer v0.0.4
 versionDean: &vdean v0.0.25
 versionScribble: &vscribble v0.0.22-temp-fix
-versionDinersclub: &vdinersclub v0.0.23
+versionDinersclub: &vdinersclub v0.0.25
 versionFormcentral: &vformcentral v0.0.10
 
 processingAlerts:
@@ -422,7 +422,7 @@ replybot:
       memory: 100Mi
   env:
   - name: FAKE
-    value: "NOTHING"
+    value: "NOTHIN"
   - name: CHATBASE_BACKEND
     value: "@vlab-research/chatbase-postgres"
   - name: CHATBASE_DATABASE
