--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -26,6 +26,7 @@ versionDean: &vdean v0.0.25
 versionScribble: &vscribble v0.0.22-temp-fix
 versionDinersclub: &vdinersclub v0.0.26
 versionFormcentral: &vformcentral v0.0.10
+versionExporter: &vexporter v0.1.0
 
 processingAlerts:
   - consumergroup: replybot
@@ -529,7 +530,7 @@ exporter:
   image:
     repository: "vlabresearch/exporter"
     pullPolicy: Always
-    tag: 0.1.0
+    tag: *vexporter
 
 cockroachdb:
   image:
