--- a/devops/vlab/Chart.yaml
+++ b/devops/vlab/Chart.yaml
@@ -41,6 +41,7 @@ dependencies:
       - backup
   - name: exporter
     version: 0.1.0
+    condition: exporter.enabled
     repository: oci://us-west1-docker.pkg.dev/toixotoixo/vlab-research/charts
   # TODO: the below charts should be moved to OCI conformant registries
   # but can not be found
