--- a/devops/vlab/Chart.yaml
+++ b/devops/vlab/Chart.yaml
@@ -39,6 +39,9 @@ dependencies:
     repository: oci://us-west1-docker.pkg.dev/toixotoixo/vlab-research/charts
     tags:
       - backup
+  - name: exporter
+    version: 0.1.0
+    repository: oci://us-west1-docker.pkg.dev/toixotoixo/vlab-research/charts
   # TODO: the below charts should be moved to OCI conformant registries
   # but can not be found
   - name: naughtybot
