--- a/dashboard-server/package.json
+++ b/dashboard-server/package.json
@@ -50,6 +50,7 @@
     "express-jwt": "5.3.1",
     "joi": "14.3.1",
     "jwks-rsa": "1.4.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.9.1",
     "pg": "^8.6.0",
     "r2": "^2.0.1",
