--- a/devops/dev/kind-cluster.yaml
+++ b/devops/dev/kind-cluster.yaml
@@ -2,13 +2,36 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 containerdConfigPatches:
+# required for the local registry
 - |-
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
     endpoint = ["http://kind-registry:5000"]
-# We should have a kind cluster that has some workers
-# to speed up deployment
 nodes:
 - role: control-plane
+  kubeadmConfigPatches:
+  - |
+    # Configiuration for ingress controller
+    kind: InitConfiguration
+    nodeRegistration:
+      kubeletExtraArgs:
+        node-labels: "ingress-ready=true"
+  extraPortMappings:
+  # Exposes ingress controller on 0.0.0.0:80
+  - containerPort: 80
+    hostPort: 80
+    protocol: TCP
+  # Exposes ingress controller on 0.0.0.0:443 (TLS)
+  - containerPort: 443
+    hostPort: 443
+    protocol: TCP
+  # Exposes kafka on 0.0.0.0:30092
+  - containerPort: 30092
+    hostPort: 30092
+    protocol: TCP
+  # Exposes cockroachdb on 0.0.0.0:35432
+  - containerPort: 32432
+    hostPort: 32432
+    protocol: TCP
 - role: worker
 - role: worker
 - role: worker
